    and probably security enhancements similar to database.
  * Fixed possible infinite loop in cronjobs/calculate_user_metric.php.
  * [Christian] backport of 2_6_1 docman for better language support
  * [Christian] Fixed install-ldap loss of robot password
  * [Christian] Started FTP setup
  * [Christian] Download server added
  * [Christian] File Release FRS support added (closes: #108173)
  * [Christian] Added CVS nightly tarballs 
  * Fixed errors in LDAP configuration so that the online creation of
    groups and users works.
  * Fixed a thinko in debian/sourceforge/cron.d.
  * Added a periodical check for the presence of an incoming directory in
    the users' home dir.
  * Fixed versioned dependency on debconf (thanks to lintian).
  * Removed unnecessary CVS/ dirs from the package when it's built from a
    CVS checkout (as opposed to a CVS export).
  * Fix in include.pl to allow the use of an empty password.  To be
    tested, but it might help closing #116009.
  * Delayed deletion of files until the very end of the uninstall process,
    in order to potentially help fixing one symptom described in #116009
    too.
  * deb-specific/install-exim.sh: (still related to, and not closing,
    #116009) no need to require /etc/sourceforge/local.pl when
    deconfiguring.
  * Updated debian/TODO a bit.
  * Added fileforge.pl, a setuid Perl script to move files around securely
    (without needing to grant www-data read/write permission on
    $user/incoming/ directories).  Not using it yet, needs more testing.

 --

sourceforge (2.5-10) unstable; urgency=low

  * I am starting to get rather confident in this package, to the point
    where I cannot think of major bugs preventing it to enter woody
    (closes: #99336).  It will still have to wait for its dependencies to
    be fulfilled and for its other RC bugs to be fixed/closed, but I won't
    artificially keep it out from testing.
  * Fixed possible double insertion of the sourceforge alias in